--- a/C# 高级/1.泛型/泛型.md
+++ b/C# 高级/1.泛型/泛型.md
@@ -92,4 +92,119 @@ CommonMethod.Show<DateTime>(dtValue);
 
 我们知道，在程序的执行过程中，编写的程序会一步一步编译成二进制代码，再由计算机执行。在程序中声明的泛型，在编译器编译期间，都会生成对应的有具体数据类型的方法或类型。<font style="color:rgb(51, 51, 51);">泛型是C#2.0推出的新语法，是需要编译器的支持。</font>
 
+## 泛型的性能
+
+使用泛型除了使代码更简便外，还能避免传<font style="color:rgb(51, 51, 51);">object的装箱拆箱带来的性能损耗。</font>
+
+```csharp
+using System.Diagnostics;
+
+namespace Generic
+{
+    /// <summary>
+    /// 性能对比
+    /// </summary>
+    public class Monitor
+    {
+        public static void Show()
+        {
+            {
+                int iValue = 12345;
+                long commonSecond = 0;
+                long objectSecond = 0;
+                long genericSecond = 0;
+
+                {
+                    Stopwatch watch = new();
+                    watch.Start();
+                    for (int i = 0; i < 100_000_000; i++)
+                    {
+                        ShowInt(iValue);
+                    }
+                    watch.Stop();
+                    commonSecond = watch.ElapsedMilliseconds;
+                }
+                {       ......
+                        ShowObject(iValue);
+                        ......
+                }
+                {       ......
+                        Show<int>(iValue);
+                        ......
+                }
+                Console.WriteLine("commonSecond={0},objectSecond={1},genericSecond={2}"
+                    , commonSecond, objectSecond, genericSecond);
+            }
+        }
+
+        #region PrivateMethod
+        private static void ShowInt(int iParameter)
+        {
+        }
+        private static void ShowObject(object oParameter)
+        {
+        }
+        private static void Show<T>(T tParameter)
+        {
+        }
+        #endregion
+
+    }
+}
+```
+
+<font style="color:rgb(51, 51, 51);">Monitor类，分别使用三个方法执行1亿次，计算时间</font>
+
+![](https://cdn.nlark.com/yuque/0/2025/png/42432244/1758976189459-a187bba9-a2e4-4354-b072-a9e8de9ce5b0.png)
+
+重复执行十次后，可以看到使用泛型的方法跟基本类型性能是差不多的，而转换成object方法性能差点，是因为转换成object要经过拆箱装箱，有额外的开支。
+
+# 泛型使用
+
+除了泛型方法，泛型也可以应用到类，接口，委托上面。
+
+```csharp
+    /// <summary>
+    /// 泛型类
+    /// </summary>
+    /// <typeparam name="T"></typeparam>
+    public class GenericClass<T>
+    {
+        public T _T;
+    }
+
+    public class GenericClassChild1: GenericClass<int>
+    {
+    }
+
+    public class GenericClassChild2<T> : GenericClass<T>
+    {
+    }
+
+    /// <summary>
+    /// 泛型接口
+    /// </summary>
+    /// <typeparam name="T"></typeparam>
+    public interface IGenericInterface<T>
+    {
+        T GetT(T t);
+    }
+
+    public delegate void SayHi<T>(T t);//泛型委托
+```
+
+```csharp
+// T是int类型
+GenericClass<int> genericInt = new GenericClass<int>();
+genericInt._T = 123;
+// T是string类型
+GenericClass<string> genericString = new GenericClass<string>();
+genericString._T = "123";
+```
+
+泛型类在声明的时候可以不指定具体的类型，但是在实例化的时候必须指定具体类型。
+
+类在继承泛型类时要指定具体的类型，或者子类也使用泛型。
+
+尖括号内也可以指多个类型，如<T, S>
 
