添加反射内容

--- a/C# 高级/2.反射/反射.md
+++ b/C# 高级/2.反射/反射.md
@@ -150,3 +150,97 @@ public class SimpleFactory
 ![img](https://cdn.nlark.com/yuque/0/2025/png/42432244/1759850830301-7c0adcf3-1f6c-4657-8fd4-fcb50d5a3004.png)
 
 便可以得到Oracle的结果。所以反射的动态加载和动态创建对象，以及配置文件结合，可以使项目在管理上更加方便。
+
+## 重载的反射
+
+```csharp
+public ReflectionTest()
+{
+    Console.WriteLine("这里是{0}无参数构造函数", this.GetType());
+}
+
+public ReflectionTest(string name)
+{
+    Console.WriteLine("这里是{0} 有参数构造函数", this.GetType());
+}
+
+public ReflectionTest(int id)
+{
+    Console.WriteLine("这里是{0} 有参数构造函数", this.GetType());
+}
+```
+
+新建一个类：ReflectionTest.cs，同样的方法名不同的参数，通过反射也可以准确的调用。
+
+```csharp
+Assembly assembly = Assembly.Load("DB.SqlServer");
+Type type = assembly.GetType("DB.SqlServer.ReflectionTest");
+foreach (ConstructorInfo ctor in type.GetConstructors())
+{
+    Console.WriteLine(ctor.Name);
+    foreach (var parameter in ctor.GetParameters())
+    {
+        Console.WriteLine(parameter.ParameterType);
+    }
+}
+object oTest1 = Activator.CreateInstance(type);
+object oTest2 = Activator.CreateInstance(type, new object[] { 123 });
+object oTest3 = Activator.CreateInstance(type, new object[] { "你好，世界" });
+```
+
+![img](https://cdn.nlark.com/yuque/0/2025/png/42432244/1760018443599-13cacbaa-8555-4803-986b-f42bce9fbe67.png)
+
+中间的循环是获取了所有的参数，可以看到反射可以正确获取所有的参数，并正确调用。
+
+## 反射破坏单例
+
+![img](https://cdn.nlark.com/yuque/0/2025/png/42432244/1760018870798-4f36eb3c-aaba-44fc-a682-32e740976a8f.png)
+
+我们设置一个单例，该类的构造函数是private，正常使用Singleton singletonA = (Singleton)Activator.CreateInstance(type); 是无法访问的，但是CreateInstance还有一个参数：nonPublic。这个参数传new，便可以访问私有方法。
+
+![img](https://cdn.nlark.com/yuque/0/2025/png/42432244/1760019016559-d34e9231-d844-4e86-b8b3-5fbc168b7131.png)
+
+```csharp
+Singleton singletonA = (Singleton)Activator.CreateInstance(type, true);
+Singleton singletonB = (Singleton)Activator.CreateInstance(type, true);
+```
+
+​	这两行代码不会报错，且singletonA和singletonB是两个不同的实例，而一般的单例只能有一个实例。因此可以称为破坏了单例。
+
+## 泛型的反射
+
+下面，我们写一个泛型的类，再使用反射去调用。
+
+```csharp
+public class GenericClass<T, W, X>
+{
+    public void Show(T t, W w, X x)
+    {
+        Console.WriteLine("t.type={0},w.type={1},x.type={2}", t.GetType().Name, w.GetType().Name, x.GetType().Name);
+    }
+}
+
+public class GenericMethod
+{
+    public void Show<T, W, X>(T t, W w, X x)
+    {
+        Console.WriteLine("t.type={0},w.type={1},x.type={2}", t.GetType().Name, w.GetType().Name, x.GetType().Name);
+    }
+}
+
+public class GenericDouble<T>
+{
+    public void Show<W, X>(T t, W w, X x)
+    {
+        Console.WriteLine("t.type={0},w.type={1},x.type={2}", t.GetType().Name, w.GetType().Name, x.GetType().Name);
+    }
+}
+Assembly assembly = Assembly.Load("DB.SqlServer");
+Type type = assembly.GetType("DB.SqlServer.GenericClass`3");
+//GenericClass<string, int, DateTime> genericClass = new GenericClass<string, int, DateTime>();
+//object oGeneric = Activator.CreateInstance(type);
+Type typeMake = type.MakeGenericType(new Type[] { typeof(string), typeof(int), typeof(DateTime) });
+object oGeneric = Activator.CreateInstance(typeMake);
+```
+
+这里面要注意，调用泛型方法是要加上`参数数量，如`3，然后用MakeGenericType来确定方法类型。
