更新委托代码

--- a/C# 高级/5.委托/委托.md
+++ b/C# 高级/5.委托/委托.md
@@ -30,7 +30,7 @@ public class OtherClass
 public delegate int AddDele1(int a, int b);
 public delegate int AddDele2(int a, int b);
 public delegate int AddDele3(int a, int b);
-public void DelegateUse()
+
 public void DelegateUse()
 {
     OtherClass other = new();
@@ -60,6 +60,8 @@ public void DelegateUse()
 ![img](https://cdn.nlark.com/yuque/0/2025/png/42432244/1761312201271-67b77a59-21b5-419c-84c7-42eb87d8fc2d.png)
 
 # 委托的应用
+
+## 委托的优点
 
 如上个例子所示使用委托跟直接调用方法是一样的，那么为什么要使用委托呢。可以看下下面复杂的例子：
 
@@ -179,3 +181,54 @@ student.SayHiPerfact("张三", method);
 ```
 
 这就是委托的优点：解耦代码，提高代码复用，提高灵活性等
+
+## 内置委托
+
+不需要自定义，其实c#内置有两个泛型委托可供使用，一个是Action， 一个是Func。他们共同点是都是最高支持16个参数的方法，不同点是Action无返回值，Func有返回值，返回值类型写在最后面。应用如下：
+
+```csharp
+Action action0 = this.DoNothing;
+Action<int> action1 = this.ShowInt;
+Action<int, string, DateTime, long, int, string, DateTime, long, int, string, DateTime, long, int, string, DateTime, long> action16 = null;
+
+Func<int> func0 = this.Get;
+int iResult = func0.Invoke();
+Func<int, string> func1 = this.ToString;
+Func<int, string, DateTime, long, int, string, DateTime, long, int, string, DateTime, long, int, string, DateTime, long, string> func16 = null;
+    
+```
+
+这两个泛型委托，已经足够日常开发使用了，因此不必要声明新的委托。
+
+## 多播委托
+
+我们知道，委托的本质是类，使用委托时，需要先实例化，再将具体的方法传给实例化后的变量。那么能不能一个变量传入多个方法呢，答案是可以的：
+
+```csharp
+Action method = this.DoNothing;
+method += this.DoNothing;
+method += DoNothingStatic;
+method += new Student().Study;
+method += Student.StudyAdvanced;
+//method += this.ShowInt; //报错  方法签名不一致，不能添加
+```
+
+​	这一段就是使用了多播委托，不同的委托用 +=来连接，Invoke执行后会暗顺序执行。使用多播委托有几个注意事项：
+
+1、在使用多播委托的时候，同一个变量里的方法需要参数类型一致。
+
+2、当多播委托链中有一个方法报错，那么后面的方法都不会执行。
+
+3、当多播委托有返回值时，运行后只会取最后一个方法的返回值。
+
+多播委托 除了用 +=来链接方法，还可以使用-=来删除链接：
+
+```csharp
+method -= this.DoNothing;
+method -= DoNothingStatic;
+method -= new Student().Study;//去不掉  原因是不同的实例的相同方法，并不吻合
+method -= Student.StudyAdvanced;
+method.Invoke();
+```
+
+​	在执行-=时，从方法链的尾部开始匹配，遇到第一个完全吻合的就移除，且只会移除一个，如果没有匹配的，就不会发生什么，不会报错，相当于忽略这条语句。
