增加设计模式的补充

--- a/C# 高级/9.设计模式/设计模式.md
+++ b/C# 高级/9.设计模式/设计模式.md
@@ -1,18 +1,18 @@
-设计模式原则，就是在面向对象语言开发过程中，推荐的一些指导性原则，一些项目构成的建议，不许要强制遵守。
+设计模式原则，就是在面向对象语言开发过程中，推荐的一些指导性原则，一些项目构成的建议，不许要强制遵守。虽然原则不是编译器强制的，但在团队协作和架构设计中，它们都是尽力去遵守哦，否则代码很容易变得难以维护。
 
-这里介绍六中设计模式：
+这里介绍六种设计模式原则：
 
-\1.  单一职责原则（Single Responsibility Principle）：一个方法/类/项目只有一个职责。
+​	1.  单一职责原则（Single Responsibility Principle）：一个方法/类/项目只有一个职责。
 
-\2.  里氏替换原则（Liskov Substitution Principle）
+​	2.  里氏替换原则（Liskov Substitution Principle）
 
-\3.  依赖倒置原则（Dependence Inversion Principle）
+​	3.  依赖倒置原则（Dependence Inversion Principle）
 
-\4.  接口隔离原则（Interface Segregation Principle）
+​	4.  接口隔离原则（Interface Segregation Principle）
 
-\5.  迪米特法则  （Law Of Demeter）
+​	5.  迪米特法则  （Law Of Demeter）
 
-\6.  开闭原则    （Open Closed Principle)
+​	6.  开闭原则    （Open Closed Principle)
 
 # 单一职责原则
 
@@ -128,11 +128,223 @@ public class People
 
 # 依赖倒置原则
 
+高层模块不应该依赖低层模块，二者都应该于抽象，依赖抽象，而不是依赖细节。如果高低层直接依赖的话，那么改动低层也会影响高层的代码。会影响项目。
 
+举个例子：
+
+```csharp
+public class iPhone
+{
+    public void Call()
+    {
+        Console.WriteLine("User {0} Call", this.GetType().Name);
+    }
+    public void Text()
+    {
+        Console.WriteLine("User {0} Text", this.GetType().Name);
+    }
+}
+public class Student
+{
+    public int Id { get; set; }
+    public string Name { get; set; }
+
+    public void PlayiPhone(iPhone phone)
+    {
+        Console.WriteLine("这里是{0}", this.Name);
+        phone.Call();
+        phone.Text();
+    }
+}
+```
+
+这种写法就是高低层的一种依赖，
+
+如果要再加一个手机对象，供Student使用呢，那高低层都要写，并且高层的代码会受低层的影响，就要求先开发低层代码再开发高层代码，如果工作中高低层是交给两个人开发的，那就会有影响。
+
+```csharp
+public class Oppo
+{
+    public void Call()
+    {
+        Console.WriteLine("User {0} Call", this.GetType().Name);
+    }
+
+    public void Text()
+    {
+        Console.WriteLine("User {0} Call", this.GetType().Name);
+    }
+}
+public class Student
+{
+    public int Id { get; set; }
+    public string Name { get; set; }
+
+    /// <summary>
+    /// 依赖细节  高层就依赖了底层
+    /// </summary>
+    /// <param name="phone"></param>
+    public void PlayiPhone(iPhone phone)
+    {
+        Console.WriteLine("这里是{0}", this.Name);
+        phone.Call();
+        phone.Text();
+    }
+
+    public void PlayOppo(Oppo phone)
+    {
+        Console.WriteLine("这里是{0}", this.Name);
+        phone.Call();
+        phone.Text();
+    }
+
+}
+```
+
+那么可以改成依赖倒置原则，增加一个抽象类，使高低层都访问这个抽象类。
+
+```csharp
+public abstract class AbstractPhone
+{
+    public int Id { get; set; }
+    public string Branch { get; set; }
+    public abstract void Call();
+    public abstract void Text();
+}
+public class iPhone : AbstractPhone
+{
+    public override void Call()
+    {
+        Console.WriteLine("User {0} Call", this.GetType().Name);
+    }
+    public override void Text()
+    {
+        Console.WriteLine("User {0} Text", this.GetType().Name);
+    }
+}
+public void Play(AbstractPhone phone)
+{
+    Console.WriteLine("这里是{0}", this.Name);
+    phone.Call();
+    phone.Text();
+
+    //phone.Bracelet();
+}
+```
+
+这样再加手机类并继承AbstractPhone类的话就可以直接调用Play了。
 
 # 接口隔离原则
 
+接口隔离是客户端不应该依赖它不需要的接口；一个类对另一个类的依赖应该建立在最小的接口上。简单来讲继承一个接口能够实现该接口的所有方法。
 
+这里加了个接口：
+
+```csharp
+public interface IExtend
+{
+    void Photo();
+    void Online();
+    void Game();
+    void Record();
+    void Movie();
+    void Map();
+    void Pay();
+}
+```
+
+iPhone类继承这个接口，因为iPhone可以用到IExtend的所有方法，这个没问题。
+
+```csharp
+public class iPhone : AbstractPhone, IExtend
+{
+    public override void Call()
+    {
+        Console.WriteLine("User {0} Call", this.GetType().Name);
+    }
+    public override void Text()
+    {
+        Console.WriteLine("User {0} Text", this.GetType().Name);
+    }
+
+    public void Photo()
+    {
+        Console.WriteLine("User {0} Photo", this.GetType().Name);
+    }
+
+    public void Online()
+    {
+        Console.WriteLine("User {0} Online", this.GetType().Name);
+    }
+
+    public void Game()
+    {
+        Console.WriteLine("User {0} Game", this.GetType().Name);
+    }
+
+    public void Map()
+    {
+        Console.WriteLine("User {0} Map", this.GetType().Name);
+    }
+
+    public void Pay()
+    {
+        Console.WriteLine("User {0} Pay", this.GetType().Name);
+    }
+
+    public void Record()
+    {
+        Console.WriteLine("User {0} Record", this.GetType().Name);
+    }
+
+    public void Movie()
+    {
+        Console.WriteLine("User {0} Movie", this.GetType().Name);
+    }
+}
+```
+
+但我要换一种设备，比如游戏机，只有上面的Online和Game功能，那么怎么做？
+	要实现接口隔离原则，那就拆分接口：
+
+```csharp
+public interface IExtend
+{
+    void Photo();
+    //void Online();
+    //void Game();
+    void Record();
+    void Movie();
+    void Map();
+    void Pay();
+}
+public interface IExtendGame
+{
+    void Online();
+    void Game();
+}
+```
+
+然后iPhone类就要再继承IExtendGame接口，否则会报错。
+
+```csharp
+public class PS4 : IExtendGame
+{
+    public void Online()
+    {
+        Console.WriteLine("User {0} Online", this.GetType().Name);
+    }
+
+    public void Game()
+    {
+        Console.WriteLine("User {0} Game", this.GetType().Name);
+    }
+}
+```
+
+但如果再来一个不能联网的游戏机呢，又要把Game再拆开来，那就变成一个方法一个接口了，那也不行。
+
+所以接口的定义不能太大，不然会有很多用不到的，也不要太细，不太可行，需要根据业务需求去调整。
 
 # 迪米特原则
 
@@ -236,3 +448,5 @@ public class Student
 这样就遵循了迪米特原则。实际运用中可以设计一个中间层，比如三层架构
 
 # 开闭原则
+
+开闭原则的意思是对扩展开发，对修改关闭，也就是尽量不要去修改已经写好的类，用继承，扩展方法等对类进行扩展的开发。
