--- a/C# 高级/9.设计模式/设计模式.md
+++ b/C# 高级/9.设计模式/设计模式.md
@@ -1,4 +1,4 @@
-设计模式原则，就是在面向对象语言开发过程中，推荐的一些指导性原则，一些项目构成的建议，不许要强制遵守。虽然原则不是编译器强制的，但在团队协作和架构设计中，它们都是尽力去遵守哦，否则代码很容易变得难以维护。
+设计模式原则，就是在面向对象语言开发过程中，推荐的一些指导性原则，一些项目构成的建议，不需要强制遵守。虽然原则不是编译器强制的，但在团队协作和架构设计中，它们都是要尽力去遵守的，否则代码很容易变得难以维护。
 
 这里介绍六种设计模式原则：
 
@@ -88,14 +88,14 @@ public class Fish : AbstractAnimal
 我们可以看一个例子：
 
 ```csharp
-    public class ParentClass
+public class ParentClass
+{
+    public void CommonMethod()
     {
-        public void CommonMethod()
-        {
-            Console.WriteLine("ParentClass CommonMethod");
-        }
-
+        Console.WriteLine("ParentClass CommonMethod");
     }
+
+}
 
 public class ChildClass : ParentClass
 {
@@ -124,7 +124,7 @@ public class People
 
 这里有一个类，有两个属性和一个方法，当后续写子类的时候，最好都包含上面的方法，假设有一个类不需要Traditional方法，要另写一个方法，那么不推荐去继承People了，推荐去新写一个父类。
 
-父类有的，子类是必须有的，如果出现了子类没有的东西，那么就应该断掉继承。子类可以有自己的属性和行为，父类实现的东西，子类就不要去替换，这就是里氏替换原则。
+子类应该能够完全替代父类，而不改变程序的正确性。如果子类需要**改变**父类的行为，或者**缺少**父类的某些核心能力，那么这样的继承关系可能就不合理，应该考虑重构。子类可以有自己的属性和行为，父类实现的东西，子类就不要去替换，这就是里氏替换原则。
 
 # 依赖倒置原则
 
@@ -158,9 +158,7 @@ public class Student
 }
 ```
 
-这种写法就是高低层的一种依赖，
-
-如果要再加一个手机对象，供Student使用呢，那高低层都要写，并且高层的代码会受低层的影响，就要求先开发低层代码再开发高层代码，如果工作中高低层是交给两个人开发的，那就会有影响。
+这种写法就是高低层的一种依赖，如果要再加一个手机对象，供Student使用呢，那高低层都要写，并且高层的代码会受低层的影响，就要求先开发低层代码再开发高层代码，如果工作中高低层是交给两个人开发的，那就会有影响。
 
 ```csharp
 public class Oppo
@@ -172,7 +170,7 @@ public class Oppo
 
     public void Text()
     {
-        Console.WriteLine("User {0} Call", this.GetType().Name);
+        Console.WriteLine("User {0} Text", this.GetType().Name);
     }
 }
 public class Student
