增加设计者模式和代码

--- a/C# 高级/13.设计模式/设计模式.md
+++ b/C# 高级/13.设计模式/设计模式.md
@@ -401,3 +401,260 @@ student.Study();
 ![img](https://cdn.nlark.com/yuque/0/2025/png/42432244/1765983233325-2686a36e-aa3b-471c-bfe4-a4df4422aa15.png)
 
 # 行为模式
+
+## 模版方法
+
+定义一个操作中算法的骨架，而将一些步骤延迟到子类中，模板方法使得子类可以不改变算法的结构即可重定义该算法的某些特定步骤。复杂的多步骤业务，定义一个父类(模板)，模板负责完成流程，把步骤分解，就是模版方法。
+
+```csharp
+public void Query(int id, string name, string password)
+{
+    if (this.CheckUser(id, password))
+    {
+        double balance = this.QueryBalance(id);
+        double interest = this.CalculateInterest(balance);
+        this.Show(name, balance, interest);
+    }
+    else
+    {
+        Console.WriteLine("账户密码错误");
+    }
+}
+public bool CheckUser(int id, string password)
+{
+    if (true) { }
+    else { }
+
+    return DateTime.Now < DateTime.Now.AddDays(1);
+}
+
+public double QueryBalance(int id)
+{
+    if (true) { }
+    else { }
+
+    return new Random().Next(10000, 1000000);
+}
+public double CalculateInterest(double balance)
+{
+    if (true) { }
+    else { }
+    return balance * 0.005;
+}
+
+public void Show(string name, double balance, double interest)
+{
+    Console.WriteLine("尊敬的{0}客户，你的账户余额为：{1}，利息为{2}",
+        name, balance, interest);
+}
+```
+
+以银行系统为例，上面是一种简单的写法，用if else把各种情况包含在一起，在分支少的情况下可以用这种方法，但一旦分支多了，比如说CalculateInterest，每个端逻辑不一样，就要用抽象，然后子类再写具体实现。
+
+```csharp
+public abstract class AbstractClient
+{
+    public void Query(int id, string name, string password)
+    {
+        if (this.CheckUser(id, password))
+        {
+            double balance = this.QueryBalance(id);
+            double interest = this.CalculateInterest(balance);
+            this.Show(name, balance, interest);
+        }
+        else
+        {
+            Console.WriteLine("账户密码错误");
+        }
+    }
+
+    public bool CheckUser(int id, string password)
+    {
+        return DateTime.Now < DateTime.Now.AddDays(1);
+    }
+
+    public double QueryBalance(int id)
+    {
+        return new Random().Next(10000, 1000000);
+    }
+
+    public abstract double CalculateInterest(double balance);
+
+    public virtual void Show(string name, double balance, double interest)
+    {
+        Console.WriteLine("尊敬的{0}客户，你的账户余额为：{1}，利息为{2}",
+            name, balance, interest);
+    }
+
+}
+```
+
+将上面的功能分类，固定不变的方法如CheckUser，QueryBalance可以直接写具体实现，每个继承类的功能都不同，可以用abstract抽象，大部分情况不变，少数会变的可以用虚方法。
+
+```csharp
+public class ClientVip : AbstractClient
+{
+    public override double CalculateInterest(double balance)
+    {
+        return balance * 0.005;
+    }
+
+    public override void Show(string name, double balance, double interest)
+    {
+        Console.WriteLine("尊贵的{0} vip客户，您的账户余额为：{1}，利息为{2}",
+            name, balance, interest);
+    }
+}
+public class ClientRegular : AbstractClient
+{
+    public override double CalculateInterest(double balance)
+    {
+        return balance * 0.003;
+    }
+}
+```
+
+如以上两个类，ClientVip是CalculateInterest和Show都不一样，ClientRegular是CalculateInterest不一样。
+
+这种写法好处就是灵活多变，容易扩展。
+
+## 观察者
+
+观察者模式就是定义对象间的一种一对多的依赖关系，当一个对象的状态发生改变时，所有依赖于它的对象都得到通知并被自动更新。
+
+```csharp
+public void Miao()
+{
+    Console.WriteLine("{0} Miao.....", this.GetType().Name);
+
+    new Mouse().Run();//依赖
+    new Chicken().Woo();
+    new Baby().Cry();
+    new Brother().Turn();
+    new Dog().Wang();
+    new Father().Roar();
+    new Mother().Whisper();
+    new Neighbor().Awake();
+}
+```
+
+在这个例子中，Miao方法的依赖很多，不稳定，且依赖发生变化Miao方法的功能也会发生变化，不方便加减功能。观察者模式就是把这些依赖移出去，当依赖有更新时，Miao方法也会更新，且不会更改MIao方法。
+
+```csharp
+private List<IObserver> _ObserverList = new List<IObserver>();
+public void AddObserver(IObserver observer)
+{
+    this._ObserverList.Add(observer);
+}
+public void MiaoObserver()
+{
+    Console.WriteLine("{0} MiaoObserver.....", this.GetType().Name);
+    if (this._ObserverList != null && this._ObserverList.Count > 0)
+    {
+        foreach (var item in this._ObserverList)
+        {
+            item.Action();
+        }
+    }
+}
+Console.WriteLine("***************Observer******************");
+Cat cat = new Cat();
+cat.AddObserver(new Chicken());
+cat.AddObserver(new Baby());
+cat.AddObserver(new Brother());
+cat.AddObserver(new Dog());
+cat.AddObserver(new Father());
+cat.AddObserver(new Mother());
+cat.AddObserver(new Mouse());
+cat.AddObserver(new Neighbor());
+cat.AddObserver(new Stealer());
+cat.MiaoObserver();
+```
+
+把依赖放在外面，当调整的时候就不需要调整MiaoObserver的代码。
+
+## 责任链
+
+责任链模式就是将请求的处理流程，沿着链子顺序执行，还运行链子扩展和订制。
+
+```csharp
+public abstract class AbstractAuditor
+{
+    public string Name { get; set; }
+    public abstract void Audit(ApplyContext context);
+
+    private AbstractAuditor _NextAuditor = null;
+    public void SetNext(AbstractAuditor auditor)
+    {
+        this._NextAuditor = auditor;
+    }
+    protected void AuditNext(ApplyContext context)
+    {
+        if (this._NextAuditor != null)
+        {
+            this._NextAuditor.Audit(context);
+        }
+        else
+        {
+            context.AuditResult = false;
+            context.AuditRemark = "不允许请假！";
+        }
+    }
+}
+public class PM : AbstractAuditor
+{
+    public override void Audit(ApplyContext context)
+    {
+        Console.WriteLine($"This is {this.GetType().Name} {this.Name} Audit");
+        if (context.Hour <= 8)
+        {
+            context.AuditResult = true;
+            context.AuditRemark = "允许请假！";
+        }
+        else
+        {
+            base.AuditNext(context);
+        }
+    }
+}
+public class Charge: AbstractAuditor
+{
+    public override void Audit(ApplyContext context)
+    {
+        Console.WriteLine($"This is {this.GetType().Name} {this.Name} Audit");
+        if (context.Hour <= 16)
+        {
+            context.AuditResult = true;
+            context.AuditRemark = "允许请假！";
+        }
+        else
+        {
+            base.AuditNext(context);
+        }
+    }
+}
+public class AuditorBuilder
+{
+    /// <summary>
+    /// 那就反射+配置文件
+    /// 链子的组成都可以通过配置文件
+    /// </summary>
+    /// <returns></returns>
+    public static AbstractAuditor Build()
+    {
+        AbstractAuditor pm = new PM()
+        {
+            Name = "张三"
+        };
+        AbstractAuditor charge = new Charge()
+        {
+            Name = "李四"
+        };
+        pm.SetNext(charge);
+        charge.SetNext(manager);
+        return pm;
+    }
+}
+```
+
+上面的代码就是责任链模式，AbstractAuditor存放了公共属性和方法，并且用到了管观察者模式，定义了PM和Charge类，写有区别的实现，AuditorBuilder类来调用上面的类，执行pm时若符合PM的条件就执行PM的方法，若不符合就传递到Charge，一级一级传递。_NextAuditor用来传递下一级，方便灵活更改下一级和增加级别。
