增加多线程内容

--- a/C# 高级/15.多线程/多线程.md
+++ b/C# 高级/15.多线程/多线程.md
@@ -115,3 +115,58 @@ private async void btnAsync_Click(object sender, EventArgs e)
 同步方法慢，只有一个线程计算，异步多线程方法快，因为多个线程并发计算，但线程不能取的很大，因为cpu资源是有限的，并且资源调度会有损耗因此5个线程，但执行时间不是同步方法的1/5。
 
 同步方法有序进行，异步多线程无序。启动无序：线程资源是向操作系统申请的，由操作系统的调度策略决定，所以启动顺序随机，同一个任务同一个线程，执行时间也不确定，CPU分片，因此结束时间也无序，可以看上面的截图，启动是0,1,2,3,4，但结束是1,2,0,4,3。线程的顺序是随机的，不好预测的，无法控制顺序。
+
+## 任务等待
+
+虽然异步线程无法控制顺序，但可以控制同步的顺序。
+
+方法一：可以通过回调的方法，将线程执行成功的后操作的代码放到回调中去执行。
+
+```csharp
+Action<string> action = this.DoSomethingLong;
+var t = Task.Run(() => action("btnAsyncAdvanced_Click"));
+t.ContinueWith(t2 =>
+{
+    if (t2.IsCompletedSuccessfully)
+    {
+        Console.WriteLine($"btnAsyncAdvanced_Click 计算成功（回调）. {Thread.CurrentThread.ManagedThreadId:00}");
+    }
+    else if (t2.IsFaulted)
+    {
+        Console.WriteLine($"子任务异常: {t2.Exception}");
+    }
+}, TaskScheduler.FromCurrentSynchronizationContext());
+```
+
+方法二：通过IsCompleted进行轮询等待，在线程运行期间，t.IsCompleted为false，会重复运行循环代码，当线程完成后，就会跳过循环代码，往下运行。
+
+```csharp
+var pollingTask = Task.Run(async () =>
+{
+    int i = 0;
+    while (!t.IsCompleted)
+    {
+        if (i < 9) Console.WriteLine($"完成{++i * 10}%....");
+        else Console.WriteLine($"完成99.999999%....");
+        await Task.Delay(200); // 不阻塞 UI 线程
+    }
+    Console.WriteLine("已完成");
+});
+```
+
+方法三：使用await获取返回值
+
+```csharp
+Func<int> func = () =>
+{
+    Thread.Sleep(2000);
+    return DateTime.Now.Hour;
+};
+var task = Task.Run(func);
+task.ContinueWith(t2 =>
+{
+    if (t2.IsCompletedSuccessfully) Console.WriteLine($"回调（UI）结果: {t2.Result}");
+    else Console.WriteLine($"子任务异常: {t2.Exception}");
+}, TaskScheduler.FromCurrentSynchronizationContext());
+int result = await task;
+```
