更新多线程

--- a/C# 高级/15.多线程/多线程.md
+++ b/C# 高级/15.多线程/多线程.md
@@ -170,3 +170,63 @@ task.ContinueWith(t2 =>
 }, TaskScheduler.FromCurrentSynchronizationContext());
 int result = await task;
 ```
+
+# Thread实现多线程
+
+C#中通过使用 Thread 类实现多线程编程。Thread 类位于 System.Threading 命名空间中，该类主要用于创建并控制线程、设置线程优先级并获取其状态。
+
+Thread基本写法如下：
+
+```csharp
+ParameterizedThreadStart method = o => this.DoSomethingLong("btnThread_Click");
+Thread thread = new Thread(method);
+thread.Start("123");
+```
+
+常用的方法和属性：
+
+Thread.Sleep(200) ：当前线程休息200ms
+
+thread.Join(1000); 最多等待1000ms
+
+thread.Start();//开启线程，执行委托的内容
+
+thread.Priority 将线程的优先级，设置优先级但不代表绝对的优先完成
+
+
+
+```csharp
+Func<int> func = () =>
+    {
+        Thread.Sleep(5000);
+        return DateTime.Now.Year;
+    };
+Func<int> funcThread = this.ThreadWithReturn(func);//非阻塞
+Console.WriteLine("do something else/////");
+Console.WriteLine("do something else/////");
+Console.WriteLine("do something else/////");
+Console.WriteLine("do something else/////");
+Console.WriteLine("do something else/////");
+
+int iResult = funcThread.Invoke();//阻塞
+
+private Func<T> ThreadWithReturn<T>(Func<T> func)
+{
+    T t = default(T);
+    ThreadStart threadStart = new ThreadStart(() =>
+    {
+        t = func.Invoke();
+    });
+    Thread thread = new Thread(threadStart);
+    thread.Start();
+
+    return new Func<T>(() =>
+    {
+        thread.Join();
+        //thread.ThreadState
+        return t;
+    });
+}
+```
+
+这段代码展示了异步获取返回值的功能。
